# meeting-transcriber

./: .gitignore  .python-version  README.md  SPEC.md  pyproject.toml  setup.sh
transcriber/: chunk.py  cli.py  convert.py  diarize.py  doctor.py  errors.py  merge.py  render.py  transcribe_stage.py  workdir.py
